# taiga-bot-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: docker-publish.yml
assets/: about_kou.txt  common_settings.toml  interfaceStringsKou.json  interfaceStringsTaiga.json  kou_intro.txt  localizedStrings.json  random_responses.dhall  random_responses.toml
assets/game/: quiz_kou.json  quiz_taiga.json  words.json
assets/json/: conversion_table.json  random_responses.json  routes.json  ship_messages.json  valentines.json
assets/json/backup/: common_kou.json  common_taiga.json
assets/txt/: about_kou.txt  about_taiga.txt  kou_intro.txt  taiga_intro.txt
persistence/: channelSettings.json  config.json  interfaceStringsKou.json  interfaceStringsTaiga.json  kou_intro.txt  messages.json  oracles.json  randomMessages.json  reminders.json  taiga_intro.txt  userRecords.json  userReplies.json  valentines.json
persistence/game/: quiz_kou.json  quiz_taiga.json  words.json
persistence/gif/: smite_links.json
protos/: discord_bot_service.proto  game.proto  jwt_token_service.proto
src/: handlers.rs  lib.rs  main.rs
src/commands/: about.rs  avatar.rs  comic.rs  convert.rs  dialog.rs  emote.rs  enlarge.rs  guide.rs  help.rs  image.rs  meal.rs  mod.rs  oracle.rs  owoify.rs  pick.rs  ping.rs  remind.rs  route.rs  say.rs  ship.rs  stats.rs  time.rs  valentine.rs
src/commands/admin/: channel_control.rs  mod.rs
src/commands/deprecated/: about.rs  comic.rs  emote.rs  guide.rs  help.rs  pick.rs  remind.rs  say.rs  time.rs
src/commands/fun/: answer_anon.rs  dialog.rs  emote.rs  mod.rs  owoify.rs  qotd.rs  ship.rs  what_do_you_think.rs
src/commands/game/: hangman.rs  mod.rs  quiz.rs
src/commands/games/: hangman.rs  mod.rs  quiz.rs  tictactoe.rs
src/commands/information/: about.rs  guide.rs  meal.rs  mod.rs  oracle.rs  ping.rs  route.rs  stats.rs  time.rs  valentine.rs
src/commands/smite/: mod.rs
src/commands/utility/: avatar.rs  batch_translate.rs  convert.rs  enlarge.rs  eval.rs  image.rs  mod.rs  pick.rs  save_file.rs  translate.rs
src/deprecated/: handlers.rs  main__.rs
src/event_handler/: mod.rs
src/event_handler/commands/: mod.rs
src/event_handler/hooks/: mod.rs  normal_message.rs
src/event_handler/presences/: mod.rs
src/event_handler/responses/: certify.rs  emote.rs  greet.rs  mention.rs  mod.rs  qotd.rs  reaction.rs  response.rs
src/protos/: discord_bot_service.rs  game.rs  jwt_token_service.rs  mod.rs
src/shared/: authentication.rs  character.rs  constants.rs  convert_table.rs  image_service.rs  interface.rs  interface_strings.rs  mod.rs  oracle.rs  persistence.rs  ship_message.rs  specialized_dialog.rs  specialized_info.rs  user_records.rs  utility.rs  validator.rs
src/shared/deprecated/: interface_strings.rs  specialized_info.rs
src/shared/services/: authentication.rs  credit_service.rs  dialog_service.rs  google_drive_service.rs  image_service.rs  interface.rs  judge_zero_service.rs  message_service.rs  mod.rs  open_router_service.rs  openai_service.rs  persistence.rs  ship_service.rs
src/shared/structs/: channel_settings.rs  command_group_collection.rs  dialog.rs  interface_strings.rs  mod.rs  quiz_question.rs  random_message.rs  reminders.rs  ship_message.rs
src/shared/structures/: channel_settings.rs  character.rs  command_group_collection.rs  config.rs  dialog.rs  interface_strings.rs  mod.rs  oracle.rs  (+5 more)
(+39 files in other folders)
