[package]
name = "taiga-bot-rs"
version = "5.0.0"
authors = ["Chehui Chou <deadshot465@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = ">=1.0.70"
async-openai = "0.10.3"
base64 = ">=0.21.0"
chrono = { version = ">=0.4", features = ["serde"] }
dashmap = "5.4.0"
google-drive = ">=0.6.0"
image = ">=0.24.6"
once_cell = ">=1.17.1"
owoify_rs = ">=1.0.0"
rand = ">=0.8.5"
regex = ">=1"
reqwest = { version = ">=0.11", features = ["blocking", "json"] }
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0"
serenity = { version = ">=0.11.5", features = ["cache", "collector", "gateway", "unstable_discord_api"] }
tokio = { version = ">=1.27.0", features = ["full", "parking_lot"] }
toml = ">=0.7.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[profile.dev]
split-debuginfo = "unpacked"
