[package]
name = "taiga-bot-rs"
version = "5.0.1"
authors = ["Chehui Chou <deadshot465@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = ">=1.0.70"
async-openai = "0.20.0"
base64 = ">=0.21.0"
chrono = { version = ">=0.4", features = ["serde"] }
dashmap = "5.4.0"
google-drive = ">=0.6.0"
image = ">=0.25.1"
num-traits = ">=0.2.18"
once_cell = ">=1.17.1"
openssl = { version = "0.10.61", features = ["vendored"] }
owoify_rs = ">=1.0.0"
poise = { version = "0.6.1", features = ["cache", "collector"] }
rand = ">=0.8.5"
regex = ">=1"
reqwest = { version = ">=0.11", features = ["blocking", "json"] }
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0"
serenity = { version = ">=0.12.1", features = ["cache", "collector", "gateway", "unstable_discord_api"] }
tokio = { version = ">=1.27.0", features = ["full", "parking_lot"] }
toml = ">=0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
log = "0.4.21"

[profile.dev]
split-debuginfo = "unpacked"
