[package]
name = "taiga-bot-rs"
version = "6.7.2"
authors = ["Chehui Chou <deadshot465@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = ">=1.0.98"
async-openai = { git = "https://github.com/deadshot465/async-openai.git" }
base64 = ">=0.21.0"
chrono = { version = ">=0.4", features = ["serde"] }
dashmap = "6.1.0"
google-drive = ">=0.7.0"
image = ">=0.25.6"
num-traits = ">=0.2.19"
once_cell = ">=1.21.3"
openssl = { version = "0.10.73", features = ["vendored"] }
owoify_rs = ">=1.0.0"
poise = { version = "0.6.1", features = ["cache", "collector"] }
rand = ">=0.9.1"
regex = ">=1"
reqwest = { version = ">=0.12", features = ["blocking", "json"] }
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0"
serenity = { version = ">=0.12.4", features = ["cache", "collector", "gateway", "unstable_discord_api"] }
tokio = { version = ">=1.46.0", features = ["full", "parking_lot"] }
toml = ">=0.8.23"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
log = "0.4.27"
time = { version = "0.3.41", features = ["serde", "serde-well-known"] }
tiktoken-rs = { version = "0.7.0", features = ["async-openai"] }

[profile.dev]
split-debuginfo = "unpacked"
